# sandsuet-checker

./: README.md  pyproject.toml
.github/workflows/: ci.yml
sandsuet_checker/: __main__.py  checker.py
